test/fail/fail_3.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_3.prsl: error: at 'EOF': Expect '}' after block, got: EOF

fact = 1;
n = 2;
while (n > 0)
{
    fact = fact * n;
    n--;


print fact;